# advent_of_code_2024

./: Cargo.toml  README.md
day01/part1/: main.rs
day01/part2/: main.rs
day02/part1/: main.rs
day02/part2/: main.rs
day03/part1/: main.rs
day03/part2/: main.rs
day04/part1/: main.rs
day04/part2/: main.rs
day1/part1/: main.rs
day1/part2/: main.rs
day2/part1/: main.rs
day2/part2/: main.rs
day3/part1/: main.rs
day3/part2/: main.rs
